hphp/hack/test/typecheck/reactive/pure_calls_rx.php.exp
File "pure_calls_rx.php", line 7, characters 3-6:
Pure functions can only call other pure functions. (Typing[4387])
  File "pure_calls_rx.php", line 3, characters 10-11:
  This function is normal.
